GDB-9215 Took the improvements from https://github.com/HASMAC-AS/hasmac-json-ld/ repository